--- a/Part1/09_spread_operator.html
+++ b/Part1/09_spread_operator.html
@@ -55,9 +55,9 @@
 
         // 각각 독립적인 값을 가지도록 array, object를 복사하려면? => spread operator 이용
         var arr3 = [1,2,3]
-        var arr4 = [...arr3];   // 이렇게 하면
+        var arr4 = [...arr3];
         console.log(arr3);
-        console.log(arr4);  // 잘 된것처럼 보이지만?
+        console.log(arr4);
 
         arr3[3] = 4;
         console.log(arr3);
