--- a/Part3/02_import_export/index.html
+++ b/Part3/02_import_export/index.html
@@ -47,9 +47,7 @@
         // ✅ 여러 export 값 각자 가져오기
         // import {a, b, c} from './library.js'
         // console.log(c);
-        /*
-            - 여러개 내보낸것 가져오려면 변수이름 똑같이 가져와야함!!
-        */
+        // - 여러개 내보낸것 가져오려면 변수이름 똑같이 가져와야함!!
         
 
         // ✅ export와 export default 같이 썼을 때
